--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-    <h1>&nbsp;Hello there! My name is Jordan Lin.</h1>
-      <p class="subtitle">Welcome to my website! While more will added to this page,<br /> check out my GitHub profile to see how this website was made!</p>
-    <a href="https://github.com/jardondaful" id="yt-link">Click here to see my GitHub profile!</a>
+  <h1>&nbsp;Hello there! My name is Jordan Lin.</h1>
+  <p class="subtitle">Welcome to my website! While more will added to this page,<br /> check out my GitHub profile to see how this website was made!</p>
+  <a href="https://github.com/jardondaful/Personal-Website" id="GitHub-link ">Click here to see the code!</a>
 </html>
